fix: ktl-511: align why code

--- a/static/js/page/index/kotlin-why-section.scss
+++ b/static/js/page/index/kotlin-why-section.scss
@@ -51,7 +51,7 @@
   .kotlin-why-section__section {
     display: grid;
     grid-template-columns: 33% 1fr;
-    grid-template-rows: max-content max-content auto;
+    grid-template-rows: auto auto 1fr;
     gap: 0 32px;
     grid-template-areas:
     "header content"
